0.4 "" (released xx.xx.2010)

  * Improved listing of available archive formats.
  * Added support for Windows systems.

0.3 "Management" (released 23.2.2010)

  * Better test if encodings of archive commands are supported
    (for example .tar.Z needs a decompress program).

0.2 "Birdy" (released 22.2.2010)

  * Add support for LZMA and XZ archives.

0.1 "Hard Boiled" (released 21.2.2010)

  * Initial release.