@@ -2,6 +2,7 @@
 
   * Improved listing of available archive formats.
   * Added support for Windows systems.
+  * Improved recognition of MIME types.
 
 0.3 "Management" (released 23.2.2010)
 
